--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,36 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="horizontal"
-    tools:context="com.study.b8a3.MainActivity"
-    android:background="#e3867f7f"
-    >
+    tools:context="com.study.b8a3.MainActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.study.b8a3.FreshText
             android:id="@+id/fresh_text"
             android:layout_width="20sp"
             android:layout_height="wrap_content"
-            android:ems="1"
-            android:textColor="#ffffff"
-            android:visibility="invisible"
-            android:text="松开刷新。。。"
-            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="11dp"
             android:layout_marginStart="11dp"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:ems="1"
+            android:overScrollMode="never"
+            android:text="松开刷新。。。"
+            android:textColor="#ffffff"
+            android:visibility="invisible" />
+
         <com.study.b8a3.MyViewPager
-            android:clipChildren="true"
             android:id="@+id/vp_demo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="40dp"
             android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp">
+            android:clipChildren="true">
 
         </com.study.b8a3.MyViewPager>
+
+        <TextView
+            android:id="@+id/add_view"
+            android:layout_width="20sp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="11dp"
+            android:ems="1"
+            android:text="加载..."
+            android:visibility="invisible" />
     </RelativeLayout>
 
 
